ecmascript/parser/tests/test262-error-references/fail/679ab0881c66b0cf.js.stderr
error: Unexpected token `]`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/679ab0881c66b0cf.js:2:1
  |
2 | ]
  | ^

